--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ VITE_SUPABASE_URL="https://kavopwutcyqxdoplmvqg.supabase.co"
 VITE_GOOGLE_SCRIPT_URL="https://script.google.com/macros/s/AKfycbx_YOUR_SCRIPT_ID_HERE/exec"
 VITE_WHATSAPP_NUMBER="8801410809023"
 VITE_SUPPORT_EMAIL="waavelink@gmail.com"
+VITE_TURNSTILE_SITE_KEY=0x4AAAAAAB0NkY4EFDjYWk7v
